tests/NormalTests/paczka1/fuzzy1/20554911.err
Error in line 21: QZLhyZ A1b3 35,1
Error in line 11: QZLhyZ A701 58,1
Error in line 24: QZLhyZ A183 110,6
Error in line 27: QZLhyZ A977 33,4
Error in line 17: 6ljc0Qn A183 4,9
Error in line 31: 6ljc0Qn A977 92,7
Error in line 34: QW2 A977 69,5
